@@ -1,3 +1,7 @@
+2007-02-20  Michael Stucki  <michael@typo3.org>
+
+	* Add documentation files again
+
 2007-02-19  Michael Stucki  <michael@typo3.org>
 
 	* Complete rewrite as a shell script instead of PHP
